0.4.8
- Change: In the redirect after registering for an event, include the seminar number as URL parameter (#487)
- Change: Show the register/login column in the list view even when no user is logged in (#485)
- Change: In the registration form, pre-fill the number of seats with 1 (#490)
- Change: In the registration form, pre-fill the account owner field with the FE user's name (#486)
- Feature: Add fields for bank data (#464)
- Feature: Allow to have a separate page for the detailed view of events (#468)
- Feature: Added a field for "times and places" to the event record (#381)
- Feature: In the details view, show events starting the next day (#379)
- Change: Make the names of the attendees required if more than one seat is reserved (#472)
- Feature: List view of all topics (#300)
- Feature: Added default VIPs that are able to see all registrations on all events (#437)
- Feature: List other dates for the same event topic (#299)
- Fix: SQL Errors in the registration form (#473)
- Change: Make choice of payment method obligatory in the registration form (#471)
- Feature: Redirect user to registration page after login (#376)
- Feature: Add billing address to attendance record (#431)
- Feature: Confirmation page before registering for an event (#374)
- Change: Moved all record type icons to a subdirectory (#469)
- Feature: Added some checking for the early bird prices and the deadline (#335)
- Change: Added a new RTE field in the seminar record (#453)
- Feature: Checkbox "I accept the terms" on registration (#378)
- Feature: Allow selection of payment method (#434)
- Improved the manual (#380)
- Change: HTML output of the early bird prices in single view (#423)
- Change: Added some new and replaced some existing icons (#493, #470)
- Change: HTML output of speakers and organizers in list view (#421)
- Change: Switch the registration from frontendformslib to FORMidable (#433)
- Feature: Allow to edit existing seminars (#309)