@@ -1,4 +1,5 @@
 0.4.8
+- Fix: Registration is stuck for events without any payment methods (#498)
 - Change: In the redirect after registering for an event, include the seminar number as URL parameter (#487)
 - Change: Show the register/login column in the list view even when no user is logged in (#485)
 - Change: In the registration form, pre-fill the number of seats with 1 (#490)
